追加桌的状态

--- a/DiandianIOS/DiandianIOS/DAMyTableViewCell.xib
+++ b/DiandianIOS/DiandianIOS/DAMyTableViewCell.xib
@@ -36,6 +36,21 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.80000001192092896" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mV-Of-j5K">
+                        <rect key="frame" x="156" y="68" width="28" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" red="0.9407194257" green="0.0" blue="0.066420981370000007" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.69312021683673475" green="0.69312021683673475" blue="0.69312021683673475" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="highlightedColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="数量" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TMS-wh-zvH">
+                        <rect key="frame" x="156" y="68" width="28" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
+                        <nil key="highlightedColor"/>
+                        <size key="shadowOffset" width="13" height="-1"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
@@ -43,6 +58,8 @@
             <connections>
                 <outlet property="imgTable" destination="Edt-Gx-nOD" id="wC8-Gl-0eM"/>
                 <outlet property="tableTitle" destination="aUb-p6-ecs" id="z6E-na-LQn"/>
+                <outlet property="unFinishedCount" destination="TMS-wh-zvH" id="YXR-zi-Fly"/>
+                <outlet property="unFinishedCountMask" destination="8mV-Of-j5K" id="2Xd-0t-Gqw"/>
                 <outlet property="viewLabel" destination="Qxb-7k-jMP" id="Hws-ri-gVG"/>
                 <outlet property="viewMask" destination="E9P-WB-nf7" id="HHn-Gt-gj1"/>
             </connections>
